syntax = "proto3";

package org.example;

option java_multiple_files = true;
option java_package = "org.example";
option java_outer_classname = "HelloWorldProto";

service HelloWorldService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}